HREPTWO-16: Fix character encoding of page, html validity and comestic changes
svn path=/hippo-ecm/trunk/; revision=17090